--- a/app/src/main/res/layout/fragment_explore_list.xml
+++ b/app/src/main/res/layout/fragment_explore_list.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".explorelist.presentation.ExploreListFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_explore_subject"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_explore_subject" />
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
